syntax = "proto3";
package PB;

enum EXTERNAL_PROTOCOL_TYPE
{
    PT_ept_null = 0;
    PT_ept_min_index = 1;
    PT_ept_test = 2;
    PT_ept_max_index = 10000;
}

message proto_buf
{
    int32 pb_type = 1;
    bytes pb_data = 2;
}

message ept_test
{
    EXTERNAL_PROTOCOL_TYPE type = 1;
    bytes somewords = 2;
}
